Changes to be committed: 	modified:   update.sh            - Updated with script that uses pre-compiled JAR file